# ci_cd

./: .gitignore  application.py  kubernetes-deployment.yaml  pyproject.toml
.circleci/: config.yml
pipeline/: training_pipeline.py
src/: custom_exception.py  data_processing.py  logger.py  model_training.py
static/: styles.css
templates/: index.html
